# polymarket-l2-collector

./: .env.example  .gitignore  Dockerfile  README.md  asset_utils.py  binance_price.py  chainlink_price.py  daemon.py  docker-compose.yml  extract_asset_id.py  file_cache.py  get_asset_id.py  logger_config.py  main.py  poly_ws_15min.py  poly_ws_1h.py  poly_ws_5min.py  pyproject.toml  restart.sh  see.sh  start_bg.sh  stop.sh
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md  task-1-review-package.diff  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md
backtest/: README.md  dataloader.py  engine.py  example_strategy.py
backtest/strategy/: take4753.py
polymarket_l2_collector/: __init__.py  __main__.py  asset_utils.py  binance_price.py  check_quality.py  collector.py  config.py  data_formatter.py  extract_asset_id.py  file_cache.py  get_asset_id.py  logger_config.py  main.py  market_discovery.py  rest_snapshot.py  window_metadata.py  ws_client.py
polymarket_l2_collector/ws_wallet/: __init__.py  chain_verify.py  dual_ws.py  verifier.py  wallet.py
tests/: test_binance_price.py  test_check_quality.py  test_collector.py  test_file_cache.py  test_market_discovery.py  test_rest_snapshot.py  test_smoke.py  test_window_metadata.py  test_ws_client.py
tests/test_ws_wallet/: test_chain_verify.py  test_dual_ws.py  test_verifier.py  (+1 more)
(+18 files in other folders)
